--- a/views/cocktail.handlebars
+++ b/views/cocktail.handlebars
@@ -20,7 +20,7 @@
 <!-- Adicione um bloco para mostrar os resultados -->
 <!-- cocktail.handlebars -->
 
-<div class="accordion accordion-flush" id="accordionFlushExample">
+<div class="accordion accordion-flush mt-5 mb-5" id="accordionFlushExample">
   {{#each cocktails}}
     <div class="accordion-item">
       <h2 class="accordion-header">
